# smarthouse

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
examples/: borrowing_device_info_provider.rs  owning_device_info_provider.rs  rooms.rs
smart-house-http/: .env  .env.example  Cargo.toml  diesel.toml  docker-compose.yml
smart-house-http/examples/: generate.rs  house.rs  report.rs  rooms.rs
smart-house-http/migrations/2022-08-29-081220_create_houses/: up.sql
smart-house-http/migrations/2022-08-29-102900_create_rooms/: up.sql
smart-house-http/migrations/2022-08-29-102901_create_house_rooms/: down.sql  up.sql
smart-house-http/migrations/2022-08-31-183615_create_devices/: down.sql  up.sql
smart-house-http/src/: db_pool.rs  device.rs  house.rs  lib.rs  main.rs  room.rs  schema.rs
smart-house-http/src/client/: mod.rs
smart-house-http/src/devices/: thermometer.rs
smart-house-http/src/utils/: has_duplicates.rs  mod.rs
smart-house-http/tests/: report.rs
smart_house/: Cargo.toml
smart_house/examples/: devices.rs
smart_house/src/: house.rs  lib.rs  room.rs
smart_house/src/devices/: device.rs
smart_house/src/utils/: mod.rs
socket-tcp/: Cargo.toml
socket-tcp/examples/: client.rs  server.rs
socket-tcp/src/: client.rs  command.rs  lib.rs  main.rs  server.rs  socket.rs
socket-tcp/tests/: client-server.rs
src/: house.rs  lib.rs  main.rs  room.rs
src/devices/: device.rs  mod.rs  socket.rs  thermometer.rs
tests/: create_report.rs
thermometer-udp/: Cargo.toml
thermometer-udp/examples/: client.rs
thermometer-udp/src/: lib.rs  temp.rs  thermometer.rs
thermometer-udp/tests/: get_datagram.rs
