[package]
name = "smart-house-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
postgres = "0.19.4"
mockall = "0.11.2"
thiserror = "1.0.32"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4"]}

[dependencies.smart_house]
path = "../smart_house"