[package]
name = "socket-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
thiserror = "1.0.32"
iced = { version = "0.4.2", features = ["tokio", "canvas", "image"] }
iced_web = "0.4.0"
wasm-bindgen = "0.2.82"